<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_restart"
        android:title="@string/menu_restart" />

    <item
        android:id="@+id/action_stop"
        android:title="@string/menu_stop" />

    <item
        android:id="@+id/action_shortcuts"
        android:title="@string/menu_shortcuts" />

    <item
        android:id="@+id/action_keybar"
        android:checkable="true"
        android:title="@string/menu_keybar" />

    <item
        android:id="@+id/action_volkeys"
        android:title="@string/menu_volkeys" />

    <item
        android:id="@+id/action_storage"
        android:title="@string/menu_storage" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/action_logs"
        android:title="@string/logs" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about" />
</menu>
